--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,17 @@
 [tool.poetry]
 name = "caixa-de-ferramentas"
-version = "0.1.0"
+version = "0.1.2"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Marco Menezes <marcoaurelioreislima@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.7"
+redis = "^5.0.0"
+kafka-python = "^2.0.2"
+azure-data-tables = "^12.4.3"
+azure-keyvault-secrets = "^4.7.0"
+azure-storage-blob = "^12.17.0"
 
 
 [build-system]
