--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - name: Copia os arquivos do repo
         uses: actions/checkout@v4.0.0
-
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+          
       - name: Roda outro comando!
         run: echo $(ls)
